--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,7 @@
   font-family: "Nunito", sans-serif;
   font-weight: 400;
   scroll-behavior: smooth;
+  /* transition: 0.5s; */
 }
 ::-webkit-scrollbar {
   width: 10px;
@@ -57,20 +58,20 @@ input[type="email"] {
 }
 .navbar {
   height: 80px;
-  position: sticky;
+  /* position: sticky;
   display: flex;
   top: 0;
-  z-index: 999;
+  z-index: 999; */
 }
 .navbar.active {
   background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 100%);
-  position: fixed;
-  width: 100%;
+  /* border-bottom: 2px white; */
+  /* position: fixed;
+  width: 100%; */
 }
-/* #head {
-  transition: all 0.5s;
+/* .fixed-top{
+  transition: 0.5s;
   z-index: 999;
-  padding: 20px 0;
 } */
 #hero {
   /* background-image: url("./images/car.gif"); */
@@ -102,6 +103,9 @@ input[type="email"] {
 }
 .B.active {
   background: rgba(0, 0, 0, 0.6);
+}
+.B {
+  transition: none;
 }
 
 /* @media (min-width: 100px) {
@@ -222,7 +226,7 @@ li:hover {
   text-align: center; */
   z-index: 1;
   /* box-shadow: 2px 0 35px 0 rgb(68 88 144 / 12%); */
-  
+
   border-radius: 8px;
   border: none;
 }
@@ -269,9 +273,31 @@ li:hover {
   border: none;
   color: black;
 }
+
+.comparecard {
+  position: relative;
+  top: 0;
+  transition: all 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
+  cursor: pointer;
+}
+
+.comparecard:hover {
+  top: -15px;
+}
 .fa-arrow-circle-right {
   font-size: 60px;
+
   font-weight: 400;
+}
+.comparearrow {
+  font-size: 60px;
+  /* margin-left: 200px; */
+  font-weight: 400;
+  left: 0;
+  right: 0;
+  top: 41%;
+  bottom: 0;
+  position: absolute;
 }
 .arrow2 {
   opacity: 0;
@@ -283,11 +309,11 @@ li:hover {
   transition: all ease-in-out 0.3s;
   background: rgba(0, 0, 0, 0.6);
 }
-.effects:hover .arrow2{
+.effects:hover .arrow2 {
   opacity: 1;
 }
-.effects{
-  box-shadow:  0 -19px 19px 2px rgba(0,0,0,0.1)!important;
+.effects {
+  box-shadow: 0 -19px 19px 2px rgba(0, 0, 0, 0.1) !important;
 }
 .arrow {
   opacity: 0;
@@ -299,10 +325,35 @@ li:hover {
   transition: all ease-in-out 0.3s;
   background: rgba(0, 0, 0, 0.6);
 }
+.arrow3 {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transition: all ease-in-out 0.3s;
+  background: rgba(0, 0, 0, 0.6);
+}
+.vsicon {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+}
 .carscard:hover .arrow {
   opacity: 1;
 }
+.comparecard:hover .arrow3 {
+  opacity: 1;
+}
+.vs {
+  opacity: 1;
 
+  position: absolute;
+  font-size: 20px;
+  background-color: black;
+  border-radius: 50px;
+}
 .details {
   opacity: 0;
   position: absolute;
@@ -374,40 +425,40 @@ ul {
 .sliderRate {
   margin-top: -11px;
 }
-.fasize{
+.fasize {
   font-size: 60px;
 }
-.facar{
+.facar {
   font-size: 50px;
 }
 /* .facar{
   font-size: 50px;
 } */
 
-.tagline{
+.tagline {
   position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    padding: 0 15px;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 15px;
 }
-.tagline h1{
+.tagline h1 {
   font-size: 48px;
 }
-.hero-container h1{
+.hero-container h1 {
   padding: 10px 30px;
   font-size: 26px;
   margin-bottom: 30px;
   border-radius: 50px;
   background-color: rgba(255, 255, 255, 0.2);
 }
-.tagline a{
+.tagline a {
   border-width: 2px;
   /* line-height: 1; */
   background-color: transparent;
@@ -417,8 +468,11 @@ ul {
   padding: 8px 30px 9px 30px;
   transition: 0.5s;
 }
-.tagline a:hover{
+.tagline a:hover {
   background-color: #e43c5c;
   font-weight: 400;
   border-color: #e43c5c;
+}
+.rateback {
+  background-color: #58c6bb;
 }
