--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,6 +32,7 @@
 }
 ::-webkit-scrollbar-track {
   background: rgb(131, 131, 131);
+  border-radius: 15px;
 }
 ::-webkit-scrollbar-thumb {
   background: rgb(48, 48, 48);
@@ -288,6 +289,7 @@ background-attachment: fixed;
   overflow: hidden;
   border: none;
   color: black;
+  background-color: #58c6bb;
 }
 
 .comparecard {
@@ -531,4 +533,11 @@ left: 93.5%; */
 .back.active{
   display: block;
 
+}
+.menu-items1{
+  max-width: 1300px;
+  max-height: 70vh;
+  /* height: fit-content;
+  width: fit-content; */
+  overflow: auto;
 }
