--- a/client/src/App.css
+++ b/client/src/App.css
@@ -182,7 +182,8 @@ background-attachment: fixed;
   text-decoration: underline;
 }
 .fshadow li {
-  color: #333333;
+  /* color: #333333; */
+  color: black;
 }
 .fshadow li:hover {
   cursor: pointer;
@@ -207,7 +208,8 @@ background-attachment: fixed;
   font-size: 17px;
 }
 .fshadow {
-  box-shadow: 0px 0px 5px 5px gainsboro;
+  /* box-shadow: 0px 0px 5px 5px gainsboro; */
+  box-shadow: 0px 2px 14px 2px gray;
 }
 .close {
   cursor: pointer;
