--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,7 +60,7 @@ input[type="email"] {
   background: transparent;
   height: 45px;
   font-size: 17px;
-  color: #f1bf19;
+  color: #f4ca3e;
   transition: 0.5s;
 }
  .signin:hover{
